# USBCamera

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aip-ocr.license
app/src/main/res/color/: finger_name.xml
app/src/main/res/drawable/: finger_btn_background.xml  finger_btn_background3.xml  finger_layout_background.xml  finger_linearlayout_background.xml  finger_name_background.xml  finger_text_color.xml  finger_type_background.xml  iris_preview_frame.xml  kuang.xml  ll_customer_selector.xml
app/src/main/res/layout/: activity_dry_wet_setting.xml  activity_face.xml  activity_gather_finger.xml  activity_idcard.xml  activity_login.xml  activity_main.xml  activity_usb.xml  (+13 more)
gradle/wrapper/: gradle-wrapper.properties
libusbcamera/: build.gradle  camera.jks
libusbcamera/src/main/: AndroidManifest.xml
libusbcamera/src/main/jni/: Android.mk  Application.mk  sensor.h
libusbcamera/src/main/jni/livescan/: Android.mk  Application.mk  CMakeLists.txt  Correction.cpp  Correction.h  FingerAPI.cpp  FingerAPI.h  FingerSensor.h  FingerSensorImpl.cpp  UVCCamera.cpp  UVCCamera.h  sensor.cpp  serenegiant_usb_UVCCamera.cpp
libusbcamera/src/main/jni/livescan/include/: sensor.h
libusbcamera/src/main/jni/livescan/src/: centipede_livescan_MosaicNative.cc  centipede_livescan_MosaicNative.h  mosaicInterface.cpp  mosaicInterface.h
libusbcamera/src/main/jni/livescan/src/kernel/: FPMosaic.cpp  FPMosaic.h  FptQualityAssessment.cpp  FptQualityAssessment.h  ImageProcess.cpp  ImageProcess.h
ocr_ui/: build.gradle
(+151 files in other folders)
